--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="image-track">
     </div>
     <div id="quotes"></div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script language="JavaScript" type="text/javascript" src="script.js"></script>
 </body>
 </html>
