perbaikan untuk code

--- a/index.html
+++ b/index.html
@@ -8,24 +8,20 @@
 </head>
 <body>
     <header>
-        <div id="navbar">
-            <div class="container">
-                <h1>Misbahul Rafi</h1>
-                <nav>
-                    <ul>
-                        <li><a href=""></a></li>
-                        <li>Portofolio</li>
-                        <li>Skills</li>
-                        <li>Project</li>
-
-                    </ul>
-                </nav>
-            </div>
-        </div>
+        <h1>Misbahul Rafi</h1>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Portofolio</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Project</a></li>
+        </ul>
     </header>
     <div id="image-track">
     </div>
-    <div id="quotes"></div>
+    <div id="quotes">
+        <div class="content"></div>
+        <div class="close">Close</div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script language="JavaScript" type="text/javascript" src="script.js"></script>
 </body>
